# CineMate

./: .env.example  .gitignore  .graphify_python  CineMate Telegram Bot – Live Testing Guide and README Draft.md  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  rq_worker.py  run_local.py  worker_runner.py
clients/: omdb_client.py  perplexity_client.py  telegram_card.py  telegram_client.py  telegram_helpers.py  watchmode_client.py
config/: __init__.py  app_config.py  redis_cache.py  supabase_client.py
docs/: GRAPHIFY.md  TEST_MATRIX.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
handlers/: __init__.py  discovery_handlers.py  feedback_handlers.py  history_handlers.py  movie_handlers.py  normalizer.py  rec_handlers.py  user_handlers.py
migrations/: feature9_admin_tables.sql
models/: __init__.py  domain.py
repositories/: __init__.py  admin_repository.py  api_usage_repository.py  feedback_repository.py  history_repository.py  movie_metadata_repository.py  session_repository.py  user_repository.py  watchlist_repository.py
scripts/: seed_movie_metadata.py
services/: __init__.py  admin_service.py  container.py  discovery_service.py  enrichment_service.py  health_service.py  logging_service.py  movie_service.py  queue_service.py  recommendation_engine.py  recommendation_service.py  semantic_service.py  session_service.py  user_service.py  worker_service.py
tests/: __init__.py  conftest.py  test_admin.py  test_bug_fixes.py  test_discovery_service.py  test_e2e_db.py  test_e2e_regression.py  test_enrichment_cache.py  test_enrichment_service.py  test_error_logging.py  test_feature7_fixes.py  test_feature8_fixes.py  test_feature9_fixes.py  test_models.py  (+15 more)
(+7 files in other folders)
